<resources>
    <string name="app_name">CocktailBar</string>



    <string name="welcome_title">My cocktail</string>
    <string name="content_description">contentDescription</string>
    <string name="add_your_first_cocktail">add your first\n cocktail here</string>
    <string name="add_bt_text">+</string>
    <string name="cocktail_name">cocktail name</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="bt_save_caption">Save</string>
    <string name="bt_cancel_caption">Cancel</string>
    <string name="cocktail_edit_title">Title</string>
    <string name="cocktail_description">Description</string>
    <string name="cocktail_recipe">Recipe</string>
    <string name="bt_edit_Caption">Edit</string>
    <string name="bt_add_caption">Add</string>
    <string name="ingredient">limes</string>
    <string name="hint_recipe">Recipe:\n%1$s</string>
</resources>