<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.AddFirstCocktailFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />


    <ImageView
        android:id="@+id/iv_welcome_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"

        android:contentDescription="@string/content_description"
        android:src="@drawable/title_banner"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:fontFamily="@font/didact_gothic"
        android:gravity="center"
        android:text="@string/welcome_title"

        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/iv_welcome_banner" />

    <TextView
        android:id="@+id/tv_add_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:fontFamily="@font/didact_gothic"
        android:gravity="center"
        android:text="@string/add_your_first_cocktail"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_arrow"
        android:layout_width="60dp"
        android:layout_height="100dp"


        app:layout_constraintStart_toStartOf="@id/tv_add_first"
        app:layout_constraintTop_toBottomOf="@id/tv_add_first"

        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/arrow_animation" />

    <ImageButton
        android:id="@+id/bt_add_first"
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_add_bt"
        android:background="@drawable/bt_background"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lav_arrow"
        android:layout_marginTop="16dp"
        android:clickable="true"

        />

</androidx.constraintlayout.widget.ConstraintLayout>