<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".presentation.fragments.EditCocktailFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"

        app:cardCornerRadius="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        tools:backgroundTint="@color/light_gray"

        >

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_gravity="center"
            android:contentDescription="@string/content_description"
            tools:src="@drawable/ic_empty_photo"

            />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/sv_cocktail_data"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_photo"
        app:layout_constraintWidth_max="500dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"

            android:paddingHorizontal="16dp"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:hint="@string/cocktail_edit_title"
                app:helperText="add title"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="500dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/didact_gothic"
                    android:gravity="start"
                    android:textSize="16sp"
                    tools:text="@string/cocktail_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:hint="@string/cocktail_description"

                app:helperText="Optional field"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_name"
                app:layout_constraintWidth_max="500dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/didact_gothic"


                    android:gravity="start"
                    android:minHeight="200dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/cocktail_name" />


            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:hint="@string/cocktail_recipe"

                app:helperText="Optional field"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_description"
                app:layout_constraintWidth_max="500dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/didact_gothic"
                    android:gravity="start"
                    android:minHeight="200dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/cocktail_name" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_save"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"

                android:textAppearance="@style/TextAppearance.AppCompat"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:minHeight="55dp"
                android:text="@string/bt_save_caption"
                android:textColor="@color/white"
                android:textSize="24sp"

                app:backgroundTint="@color/light_blue"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toTopOf="@id/bt_cancel"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_recipe"
                app:strokeColor="@color/light_blue"
                app:strokeWidth="1dp"
                app:layout_constraintWidth_max="350dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"


                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:cornerRadius="50dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/light_blue"

                android:textAppearance="@style/TextAppearance.AppCompat"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:minHeight="55dp"
                android:text="@string/bt_cancel_caption"
                android:textColor="@color/light_blue"
                android:textSize="24sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_save"
                app:layout_constraintWidth_max="350dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>