<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.CocktailDetailFragment"

    >

    <ScrollView
        android:id="@+id/sv_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_edit"
        >

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_cocktail_photo"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="450dp"
                tools:src="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:background="@drawable/fill_frame_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_cocktail_photo"
                app:layout_constraintWidth_max="450dp">


                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="16dp"

                    android:layout_marginTop="36dp"
                    android:fontFamily="@font/didact_gothic"

                    android:gravity="center"

                    android:minHeight="55dp"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="32sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/cocktail_name"

                    />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="16dp"

                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/didact_gothic"

                    android:gravity="center"

                    android:minHeight="55dp"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    tools:text="@string/cocktail_name"

                    />

                <TextView
                    android:id="@+id/tv_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/didact_gothic"


                    android:gravity="center"
                    android:minHeight="55dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                    tools:text="@string/cocktail_name"

                    />

                <TextView
                    android:id="@+id/tv_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="16dp"

                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/didact_gothic"

                    android:gravity="center"

                    android:minHeight="55dp"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_ingredient"
                    tools:text="@string/hint_recipe"

                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_edit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/didact_gothic"

        android:gravity="center"
        android:minHeight="55dp"
        android:text="@string/bt_edit_Caption"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:backgroundTint="@color/light_blue"

        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_detail"
        app:layout_constraintWidth_max="350dp"
        app:strokeColor="@color/light_blue"
        app:strokeWidth="1dp"

        />
</androidx.constraintlayout.widget.ConstraintLayout>